Completata la revisione della issue #9 post ulteriori commenti
